--- a/weather-map.html
+++ b/weather-map.html
@@ -16,10 +16,11 @@
         </div>
     </div>
     <div id="mapBox">
-
+        <div id="mapCanvas"></div>
     </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDxv0c8Wtl5RCaOPpOmH9RizVbD5SblOCw"></script>
 <script src="js/jquery-2.2.4.min.js"></script>
 <script src="js/weather-map.js"></script>
 </body>
