Added the weather map to the repo displaying degrees min and max temp  Please enter the commit message for your changes. Lines startin

--- a/weather-map.html
+++ b/weather-map.html
@@ -10,7 +10,7 @@
         <h2>Weather Application</h2>
         <h3 id="atLocation">City name</h3>
         <div class="row">
-            <div class="forcast column oneThird"></div>
+            <div class="forcast column oneThird" id="city"></div>
             <div class="forcast column oneThird"></div>
             <div class="forcast column oneThird"></div>
         </div>
