--- a/weather-map.html
+++ b/weather-map.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Weather Map</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link   rel="stylesheet" href="css/weather-map.css">
 </head>
 <body>
-    <div id="forcastBox">
+
+    <div id="forecastBox">
         <h2>Weather Application</h2>
         <h3 id="atLocation">City name</h3>
         <div class="row">
-            <div class="forcast column oneThird" id="city"></div>
-            <div class="forcast column oneThird"></div>
-            <div class="forcast column oneThird"></div>
+            <div class="forecast column oneThird" id="city"></div>
+            <div class="forecast column oneThird" id="city_day2"></div>
+            <div class="forecast column oneThird" id="city_day3"></div>
         </div>
     </div>
     <div id="mapBox">
