--- a/weather-map.html
+++ b/weather-map.html
@@ -7,7 +7,7 @@
     <link   rel="stylesheet" href="css/weather-map.css">
 </head>
 <body>
-    <div class="container" id="">
+    <div class="container">
     <div id="forecastBox">
         <h2>Weather Application</h2>
         <h3 id="atLocation">City name</h3>
