--- a/weather-map.html
+++ b/weather-map.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Weather Map</title>
+    <title>The New and Improved Weather Channel</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link   rel="stylesheet" href="css/weather-map.css">
 </head>
@@ -10,16 +10,19 @@
     <div class="container">
     <div id="forecastBox">
         <h2>Weather Application</h2>
-        <h3 id="atLocation">City name</h3>
-        <div class="row">
+        <h3 id="atLocation">San Antonio, Texas</h3>
+        <div class="row" id="forecastRow">
             <div class="forecast column oneThird" id="city"></div>
-            <div class="forecast column oneThird" id="city_day2"></div>
-            <div class="forecast column oneThird" id="city_day3"></div>
+            <div class="forecast column oneThird" id="city_day2">CITY DAY 2</div>
+            <div class="forecast column oneThird" id="city_day3">CITY DAY 3</div>
+
         </div>
-    </div>
-    <div id="mapBox">
+        <br><br>
         <div id="mapCanvas"></div>
+
+
     </div>
+
     </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDxv0c8Wtl5RCaOPpOmH9RizVbD5SblOCw"></script>
