--- a/weather-map.html
+++ b/weather-map.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>The New and Improved Weather Channel</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+   <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">-->
     <link   rel="stylesheet" href="css/weather-map.css">
 </head>
 <body>
     <div class="container">
     <div id="forecastBox">
-        <h2>Weather Application</h2>
+        <h2>The Weather Channel</h2>
         <h3 id="atLocation">San Antonio, Texas</h3>
-        <div class="row" id="forecastRow">
+        <div id="forecastRow">
             <div class="forecast column oneThird" id="city"></div>
             <div class="forecast column oneThird" id="city_day2">CITY DAY 2</div>
             <div class="forecast column oneThird" id="city_day3">CITY DAY 3</div>
