--- a/weather-map.html
+++ b/weather-map.html
@@ -12,16 +12,18 @@
 	<div id="forecastBox">
 		<div id="topContainer">
 
-			<h2>The Weather Channel</h2>
+			<h2>The Weather Channel</h2><p id="thisDate">&nbsp;&nbsp;</p>
 			<h3 id="atLocation">&nbsp;&nbsp;San Antonio, Texas</h3>
 
 			<div class="forecast column oneThird" id="city"></div>
 			<div class="forecast column oneThird" id="city_day2">CITY DAY 2</div>
 			<div class="forecast column oneThird" id="city_day3">CITY DAY 3</div>
 
-			<div id="mapCanvas"></div>
-		</div>
 
+		</div>
+		<div id="topContainer">
+		<div id="mapCanvas"></div>
+		</div>
 
 	</div>
 
@@ -31,5 +33,11 @@
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDxv0c8Wtl5RCaOPpOmH9RizVbD5SblOCw"></script>
 <script src="js/jquery-2.2.4.min.js"></script>
 <script src="js/weather-map.js"></script>
+<script src="https://newsapi.org/v1/articles?source=techcrunch&apiKey=b0448663a3694dcf9ebd224839a158a2"></script>
+<script>
+	 "use strict";
+   var date = new Date($.now());
+   $('#thisDate').append(date);
+</script>
 </body>
 </html>
