relabled some html and css to target correctly

--- a/weather-map.html
+++ b/weather-map.html
@@ -9,8 +9,8 @@
 <body>
 <div class="container">
 
-	<div id="forecastBox">
-		<div id="topContainer">
+	<div class="subContainer">
+		<div id="forecastRow">
 
 			<h2>The Weather Channel</h2><p id="thisDate">&nbsp;&nbsp;</p>
 			<h3 id="atLocation">&nbsp;&nbsp;San Antonio, Texas</h3>
@@ -21,7 +21,7 @@
 
 
 		</div>
-		<div id="topContainer">
+		<div class="subContainer">
 		<div id="mapCanvas"></div>
 		</div>
 
